<?xml version="1.0" encoding="utf-8"?>
<tools:LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.rtis.foodapp.ui.RegisterActivity">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:gravity="center_horizontal"
    android:text="@string/register_title"
    android:textSize="24sp" />

<ScrollView
    android:id="@+id/login_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="30dp">

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_name"
                android:inputType="textPersonName|textCapWords"
                android:maxLines="1"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/phoneno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_phoneno"
                android:inputType="number"
                android:maxLength="10"
                />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/UploadLinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:padding="2dp">


            <ImageView
                android:id="@+id/uploadedImage"
                android:layout_width="160dp"
                android:layout_height="100dp"
                android:layout_marginLeft="2dp"
                android:padding="10dp"
                android:src="@drawable/upload" />

            <Button
                android:id="@+id/btn_profile_pic_upload"
                android:layout_width="130dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:background="@drawable/roundbtn"
                android:text="@string/uploadPhoto"
                android:textColor="#FFFFFF"
                android:textSize="13sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">


            <Button
                android:id="@+id/registerBtn"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/roundbtn"
                android:text="@string/action_register"
                android:textColor="#FFFFFF"
                android:textSize="13sp"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>

</tools:LinearLayout>